Archive2/91/c45808819f67cb/output
main.cpp:9:11: error: type 'C' is not a direct or virtual base of 'A'
    A() : C() {}
          ^
1 error generated.
